Comentario sobre funções

--- a/08-funcoes.html
+++ b/08-funcoes.html
@@ -6,7 +6,8 @@
     <title>Funções</title>
 </head>
 <body>
-    
+    <h1>Funções</h1>
+    <hr>
 
     <script src="js/08-funcoes.js"></script>
 </body>
