--- a/09-manipulando-dom-e-eventos.html
+++ b/09-manipulando-dom-e-eventos.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JavaScript - Eventos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript - Eventos</title>
 
 </head>
+
 <body>
     <h1>Eventos</h1>
-    <p>Eventos são interações/fenômenos que ocorrem na página. Ao monitorar e manipular eventos, o JS pode reagir ao que acontece.</p>
+    <p>Eventos são interações/fenômenos que ocorrem na página. Ao monitorar e manipular eventos, o JS pode reagir ao que
+        acontece.</p>
     <hr>
 
     <h2>Exemplo 01: Detectando eventos</h2>
@@ -16,14 +19,14 @@
 
     <hr>
 
-    <h2>Exemplo 02: Detectando "saída" do site</h2>
+    <h2 id="exemplo1">Exemplo 02: Detectando "saída" do site</h2>
     <p id="mensagem02"></p>
 
 
     <hr>
 
     <h2>Exemplo 03: Modo Noturno</h2>
-    <button id="noturno">Ativar</button>  
+    <button id="noturno">Ativar</button>
 
     <hr>
 
@@ -31,19 +34,22 @@
 
     <h2>Referências</h2>
     <ul>
-        <li><b>Eloquent JavaScript:</b> 
-   <a href="https://github.com/braziljs/eloquente-javascript/blob/master/chapters/14-manipulando-eventos.md" target="_blank">
-   Manipulando Eventos</a>
-  </li>
-        <li><b>MDN:</b> 
-   <a href="https://developer.mozilla.org/pt-BR/docs/Aprender/JavaScript/Elementos_construtivos/Events" target="_blank">
-   Introdução a eventos
-   </a>
-  </li>
+        <li><b>Eloquent JavaScript:</b>
+            <a href="https://github.com/braziljs/eloquente-javascript/blob/master/chapters/14-manipulando-eventos.md"
+                target="_blank">
+                Manipulando Eventos</a>
+        </li>
+        <li><b>MDN:</b>
+            <a href="https://developer.mozilla.org/pt-BR/docs/Aprender/JavaScript/Elementos_construtivos/Events"
+                target="_blank">
+                Introdução a eventos
+            </a>
+        </li>
     </ul>
 
-   <script src=""></script>
+    <script src=""></script>
 
-   <script src="js/09-manipulando-dom-e-eventos.js"></script>
+    <script src="js/09-manipulando-dom-e-eventos.js"></script>
 </body>
+
 </html>
