--- a/09-manipulando-dom-e-eventos.html
+++ b/09-manipulando-dom-e-eventos.html
@@ -6,20 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript - Eventos</title>
 
+    <style>
+
+        .destaque{
+            
+            background-color: brown;
+            color: white;
+            padding: 0.4rem;
+            border-radius: 4px;
+
+        }
+
+    </style>
+
 </head>
 
 <body>
-    <h1>Eventos</h1>
+    <h1 id="eventos">Eventos</h1>
     <p>Eventos são interações/fenômenos que ocorrem na página. Ao monitorar e manipular eventos, o JS pode reagir ao que
         acontece.</p>
     <hr>
 
-    <h2>Exemplo 01: Detectando eventos</h2>
+    <h2 id="exemplo1">Exemplo 01: Detectando eventos</h2>
     <p id="mensagem01"></p>
 
     <hr>
 
-    <h2 id="exemplo1">Exemplo 02: Detectando "saída" do site</h2>
+    <h2" id="exemplo2" >Exemplo 02: Detectando "saída" do site</h2>
     <p id="mensagem02"></p>
 
 
@@ -32,7 +45,7 @@
 
 
 
-    <h2>Referências</h2>
+    <h2 id="referencias">Referências</h2>
     <ul>
         <li><b>Eloquent JavaScript:</b>
             <a href="https://github.com/braziljs/eloquente-javascript/blob/master/chapters/14-manipulando-eventos.md"
