exercicio modo noturno

--- a/09-manipulando-dom-e-eventos.html
+++ b/09-manipulando-dom-e-eventos.html
@@ -17,6 +17,22 @@
 
         }
 
+
+        /* Classe para modo noturno */
+        .modo-noturno{
+
+            background-color: black;
+            color: white;
+            transition: 2s;
+
+        }
+
+        body{
+
+            transition: 2s;
+
+        }
+
     </style>
 
 </head>
