--- a/09-manipulando-dom-e-eventos.html
+++ b/09-manipulando-dom-e-eventos.html
@@ -44,6 +44,13 @@
     <h2 id="exemplo1">Exemplo 01: Detectando eventos</h2>
     <p id="mensagem01"></p>
 
+    <!-- Janela MODAL -->
+    <dialog>
+        <h3>Poxa, já vai embora ?</h3>
+        <p>Tem certeza ? 😿</p>
+        <button>Fechar</button>
+    </dialog>
+
     <hr>
 
     <h2" id="exemplo2" >Exemplo 02: Detectando "saída" do site</h2>
