Janela Modal com Dialog HTML

--- a/09-manipulando-dom-e-eventos.html
+++ b/09-manipulando-dom-e-eventos.html
@@ -31,6 +31,16 @@
             
         }
 
+        #janelinha{
+
+            border-color: red;
+            border-width: 10px;
+            border-radius: 8px;
+            width: 300px;
+            text-align: center;
+
+        }
+
     </style>
 
 </head>
@@ -45,7 +55,7 @@
     <p id="mensagem01"></p>
 
     <!-- Janela MODAL -->
-    <dialog>
+    <dialog id="janelinha">
         <h3>Poxa, já vai embora ?</h3>
         <p>Tem certeza ? 😿</p>
         <button>Fechar</button>
