--- a/10-campo-senha.html
+++ b/10-campo-senha.html
@@ -10,7 +10,7 @@
     <hr>
 
     <p>
-        <input type="password" name="" id="">
+        <input type="password" name="senha" id="senha">
         <button id="mostrar">Mostrar senha</button>
     </p>
 
