filtro de busca em tempo real

--- a/11-filtro-pesquisa.html
+++ b/11-filtro-pesquisa.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filtro Pesquisa</title>
 </head>
+
 <body>
 
     <h1>Filtrando dados em uma lista</h1>
@@ -14,6 +16,61 @@
         <input type="search" name="busca" id="busca" placeholder="Buscar...">
     </p>
 
+    <ul id="clientes">
+        <li>Ana</li>
+        <li>Bruno</li>
+        <li>Carla</li>
+        <li>Diego</li>
+        <li>Eduarda</li>
+        <li>Felipe</li>
+        <li>Gabriela</li>
+        <li>Henrique</li>
+        <li>Isabela</li>
+        <li>João</li>
+        <li>Karina</li>
+        <li>Lucas</li>
+        <li>Mariana</li>
+        <li>Nathan</li>
+        <li>Olívia</li>
+        <li>Paulo</li>
+        <li>Queila</li>
+        <li>Rafael</li>
+        <li>Sofia</li>
+        <li>Tiago</li>
+        <li>Ursula</li>
+        <li>Vinícius</li>
+        <li>William</li>
+        <li>Xênia</li>
+        <li>Yara</li>
+        <li>Zeca</li>
+        <li>Alana</li>
+        <li>Breno</li>
+        <li>Cássia</li>
+        <li>Davi</li>
+        <li>Elisa</li>
+        <li>Fabrício</li>
+        <li>Giovana</li>
+        <li>Hugo</li>
+        <li>Ingrid</li>
+        <li>Júlio</li>
+        <li>Kauane</li>
+        <li>Leandro</li>
+        <li>Márcia</li>
+        <li>Nelson</li>
+        <li>Otávio</li>
+        <li>Priscila</li>
+        <li>Quirino</li>
+        <li>Rute</li>
+        <li>Samuel</li>
+        <li>Talita</li>
+        <li>Uelinton</li>
+        <li>Vanessa</li>
+        <li>Wesley</li>
+        <li>Yuri</li>
+    </ul>
+
+
     <script src="js/11-filtro-pesquisa.js"></script>
 </body>
+
 </html>
